Remove references to tracing server

--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -18,10 +18,10 @@ server:
 spring.messages.basename: messages/messages
 
 ---
-spring:
-  profiles: docker
-  zipkin:
-    baseUrl: http://tracing-server:9411
+#spring:
+#  profiles: docker
+#  zipkin:
+#    baseUrl: http://tracing-server:9411
 eureka:
   client:
     serviceUrl:
