--- a/customers-service.yml
+++ b/customers-service.yml
@@ -6,10 +6,10 @@ eureka:
     instance-id: ${spring.application.name}:${random.uuid}
 
 ---
-spring:
-  profiles: docker
-  zipkin:
-    baseUrl: http://tracing-server:9411
+#spring:
+#  profiles: docker
+#  zipkin:
+#    baseUrl: http://tracing-server:9411
 server:
   port: 8081
 eureka:
