--- a/vets-service.yml
+++ b/vets-service.yml
@@ -12,10 +12,10 @@ eureka:
     instance-id: ${spring.application.name}:${random.uuid}
 
 ---
-spring:
-  profiles: docker
-  zipkin:
-    baseUrl: http://tracing-server:9411
+#spring:
+#  profiles: docker
+#  zipkin:
+#    baseUrl: http://tracing-server:9411
 server:
   port: 8083
 eureka:
